--- a/tests/static/CMakeLists.txt
+++ b/tests/static/CMakeLists.txt
@@ -20,11 +20,13 @@ set(FORMAT_CONFIG "${PROJECT_SOURCE_DIR}/.clang-format")
 set(TIDY_CONFIG "${PROJECT_SOURCE_DIR}/.clang-tidy")
 
 # ========================================
-# 3. SETTING TARGETS
+# 3. SETTING TESTS
 # ========================================
 
-# --- Format target ---
-if(CLANG_FORMAT_EXE)
+# ========================================
+# 3.1 Format TEST
+# ========================================
+if(ENABLE_FORMAT_CHECK)
   add_test(
     NAME FormatCheck
     COMMAND bash ${SCRIPTS_DIR}/check_format.sh
@@ -32,16 +34,12 @@ if(CLANG_FORMAT_EXE)
     --config ${FORMAT_CONFIG}
     --files ${ALL_SRCS}
   )
-else()
-  add_test(
-    NAME FormatCheck
-    COMMAND ${CMAKE_COMMAND} -E echo
-    "WARNING: Clang-Format not found. FormatCheck test skipped."
-  )
 endif()
 
-# --- Tidy target ---
-if(CLANG_TIDY_EXE)
+# ========================================
+# 3.2 Tidy TEST
+# ========================================
+if(ENABLE_TIDY_CHECK)
   add_test(
     NAME TidyCheck
     COMMAND ${Python3_EXECUTABLE} ${SCRIPTS_DIR}/check_tidy.py
@@ -49,11 +47,5 @@ if(CLANG_TIDY_EXE)
     --build-dir ${CMAKE_BINARY_DIR}
     --config ${TIDY_CONFIG}
     ${ALL_SRCS}
-  )
-else()
-  add_test(
-    NAME TidyCheck
-    COMMAND ${CMAKE_COMMAND} -E echo
-    "WARNING: Clang-Tidy not found. TidyCheck test skipped."
   )
 endif()
